<resources>
    <string name="app_name">Parstagram</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Phone number, username or email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="logout">Logout</string>
    <string name="description">Description of the post</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="forgot">Forgot password?</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="like">Like</string>
    <string name="profile">Profile</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_likes_fragment">Hello Likes Fragment!</string>
    <string name="hello_profile_fragment">Hello Profile Fragment!</string>
    <string name="hello_search_fragment">Hello Search Fragment!</string>
    <string name="hello_home_fragment">Hello Home Fragment!</string>
</resources>